lagfæring á forsíðu og staff

--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-      <header>
-          <div class="header__row"> 
-              <div class="header__row__grid">
-                  <h1>Prílihúsið</h1>
+    <header>
+      <div class="header__row"> 
+        <div class="header__row__grid">
+          <h1>Prílihúsið</h1>
+        </div>
+          <div class="header__row__grid">
+            <ul class="header__row__grid-nested">
+              <div class="header__row-index">
+                <li class="header__row-item"><a href="../index.html"><u>Forsíða</u></a></li>
               </div>
-              <div class="header__row__grid">
-                  <ul class="header__row__grid-nested">
-                      <div class="header__row-index">
-                          <li class="header__row-item"><a href="../index.html"><u>Forsíða</u></a></li>
-                      </div>
-                      <div class="header__row-products">
-                          <li class="header__row-item"><a href="pages/products.html">Vörur</a></li>
-                      </div>
-                      <div class="header__row-course">
-                          <li class="header__row-item"><a href="pages/course.html">Námskeið</a></li>
-                      </div>
-                      <div class="header__row-staff">
-                          <li class="header__row-item"><a href="pages/staff.html">Starfsfólk</a></li>
-                      </div>
-                      <div class="header__row-cart">
-                          <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="pages/cart.html"> Karfa (6)</a></li>
-                      </div>
-                  </ul>
+              <div class="header__row-products">
+                <li class="header__row-item"><a href="pages/products.html">Vörur</a></li>
               </div>
+              <div class="header__row-course">
+                <li class="header__row-item"><a href="/pages/course.html">Námskeið</a></li>
+              </div>
+              <div class="header__row-staff">
+                <li class="header__row-item"><a href="/pages/staff.html">Starfsfólk</a></li>
+              </div>
+              <div class="header__row-cart">
+                <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="cart.html"> Karfa (6)</a></li>
+              </div>
+            </ul>
           </div>
-  </header>
+        </div>
+      </header>
 
     <main>
       <div class="index grid">
@@ -53,14 +53,12 @@
               </div>
             </div>
           </div>
-          <div class="row row__2">
-            <div class="col col1 col--Big3">
-              <div class="index__card">
-                <div class="index__info">
-                  <h2 class="index__title">Besta Starfsfólkið</h2>
-                  <p class="index__description">Starfsfólkið okkar hugsar vel um þig.</p>
-                  <button class="blue__button">Kynnast Starfsfólki</button>
-                </div>
+          <div class="col col1 col--Big3">
+            <div class="index__card">
+              <div class="index__info">
+                <h2 class="index__title">Besta Starfsfólkið</h2>
+                <p class="index__description">Starfsfólkið okkar hugsar vel um þig.</p>
+                <button class="blue__button">Kynnast Starfsfólki</button>
               </div>
             </div>
           </div>
