--- a/pages/staff.html
+++ b/pages/staff.html
@@ -12,81 +12,77 @@
 </head>
 
 <body>
-        <header>
-                <div class="header__row"> 
-                    <div class="header__row__grid">
-                        <h1>Prílihúsið</h1>
+    <header>
+        <div class="header__row"> 
+            <div class="header__row__grid">
+                <h1>Prílihúsið</h1>
+            </div>
+            <div class="header__row__grid">
+                <ul class="header__row__grid-nested">
+                    <div class="header__row-index">
+                        <li class="header__row-item"><a href="../index.html">Forsíða</a></li>
                     </div>
-                    <div class="header__row__grid">
-                        <ul class="header__row__grid-nested">
-                            <div class="header__row-index">
-                                <li class="header__row-item"><a href="../index.html">Forsíða</a></li>
-                            </div>
-                            <div class="header__row-products">
-                                <li class="header__row-item"><a href="products.html">Vörur</a></li>
-                            </div>
-                            <div class="header__row-course">
-                                <li class="header__row-item"><a href="course.html">Námskeið</a></li>
-                            </div>
-                            <div class="header__row-staff">
-                                <li class="header__row-item"><a href="staff.html"><u>Starfsfólk</u></a></li>
-                            </div>
-                            <div class="header__row-cart">
-                                <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="cart.html"> Karfa (6)</a></li>
-                            </div>
-                        </ul>
+                    <div class="header__row-products">
+                        <li class="header__row-item"><a href="products.html">Vörur</a></li>
                     </div>
-                </div>
-        </header>
+                    <div class="header__row-course">
+                        <li class="header__row-item"><a href="course.html">Námskeið</a></li>
+                    </div>
+                    <div class="header__row-staff">
+                        <li class="header__row-item"><a href="staff.html"><u>Starfsfólk</u></a></li>
+                    </div>
+                    <div class="header__row-cart">
+                        <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="cart.html"> Karfa (6)</a></li>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </header>
     <main>
         <div class="staff grid">
-            <div class="row">
-                <div class="col">
-                    <div class="staff__card">
-                        <div class="staff__about">
-                            <img class="staff__img" src="../img/Karítas.jpg" alt="Karítas">
-                            <div class="staff__person">
-                                <h3 class="staff__name">Karítas Hrafnsdóttir</h3>
-                                <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.</p>
+            <div class="staff__cards">
+                <div class="row">
+                    <div class="col col1 col--Big3">
+                        <div class="staff__card">
+                            <div class="staff__about">
+                                <img class="staff__img" src="../img/Karítas.jpg" alt="Karítas">
+                                <div class="staff__person">
+                                    <h3 class="staff__name">Karítas Hrafnsdóttir</h3>
+                                    <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div>
-                <div class="col">
-                    <div class="staff__card">
-                        <div class="staff__about">
-                            <img class="staff__img" src="../img/Úlfur Arnar.jpg" alt="Úlfur Arnar">
-                            <div class="staff__person">
-                                <h3 class="staff__name">Úlfur Arnar Guðjohnsen</h3>
-                                <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var 24 ára.</p>
+                    <div class="col col1 col--Big3">
+                        <div class="staff__card">
+                            <div class="staff__about">
+                                <img class="staff__img" src="../img/Úlfur Arnar.jpg" alt="Úlfur Arnar">
+                                <div class="staff__person">
+                                    <h3 class="staff__name">Úlfur Arnar Guðjohnsen</h3>
+                                    <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var 24 ára.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div>
-                <div class="col">
-                    <div class="staff__card">
-                        <div class="staff__about">
-                            <img class="staff__img" src="../img/Bergrós.jpg" alt="Bergrós">
-                            <div class="staff__person">
-                                <h3 class="staff__name">Bergrós Pétursdóttir</h3>
-                                <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
+                    <div class="col col1 col--Big3">
+                        <div class="staff__card">
+                            <div class="staff__about">
+                                <img class="staff__img" src="../img/Bergrós.jpg" alt="Bergrós">
+                                <div class="staff__person">
+                                    <h3 class="staff__name">Bergrós Pétursdóttir</h3>
+                                    <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>    
-            </div>
-            <div>
-                <div class="col">
-                    <div class="staff__card">
-                        <div class="staff__about">
-                            <img class="staff__img" src="../img/Hannes.jpg" alt="Hannes">
-                            <div class="staff__person">
-                                <h3 class="staff__name">Hannes Flóki Andrason</h3>
-                                <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá Prílihúsinu.</p>
+                    </div>    
+                    <div class="col col1 col--Big3">
+                        <div class="staff__card">
+                            <div class="staff__about">
+                                <img class="staff__img" src="../img/Hannes.jpg" alt="Hannes">
+                                <div class="staff__person">
+                                    <h3 class="staff__name">Hannes Flóki Andrason</h3>
+                                    <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá Prílihúsinu.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
