lagaði vorur, products og cart

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -40,9 +40,9 @@
       <div class="vorur">
           <div class="vorur__row">
               <div class="vorur__col">
-                  <div class="vara">
-                    <img class="vara__image" src="../img/Backpack.jpg" alt="Bakpoki">
-                    <div class="vara__innihald">
+                  <div class="vara dir--row">
+                    <img class="vara__image col--Big4" src="../img/Backpack.jpg" alt="Bakpoki">
+                    <div class="vara__innihald col--Big2">
                         <div class="vara__uppi">
                             <h2 class="vara__heiti">Bakpoki</h2>
 	            	        <p class="vara__lysing">Þú getur geymt allt sem þú þarft fyrir klifrið í þessum bakpoka.</p>
@@ -62,9 +62,9 @@
                 </div>
             </div>
             <div class="vorur__col">
-	            <div class="vara">
-                    <img class="vara__image" src="../img/chalkbag.jpg" alt="Kalkpoki">
-                    <div class="vara__innihald">
+	            <div class="vara dir--row">
+                    <img class="vara__image col--Big4" src="../img/chalkbag.jpg" alt="Kalkpoki">
+                    <div class="vara__innihald col--Big2">
                         <div class="vara__uppi">
                             <h2 class="vara__heiti">Kalkpoki</h2>
             		        <p class="vara__lysing">Kalkaðu hendurnar áður en þú verður kalkaður í hausnum.</p>
