--- a/pages/products.html
+++ b/pages/products.html
@@ -39,7 +39,7 @@
  <main>
      <div class="vorur">
          <div class="vorur__row">
-             <div class="vorur__col">
+             <div class="vorur__col col--Big3 col--Bigger4">
                  <div class="vara">
                     <img class="vara__image" src="../img/Backpack.jpg" alt="Appelsínugulur Bakpoki">
                     <div class="vara__innihald">
@@ -61,7 +61,7 @@
                 </div>
             </div>
         
-            <div class="vorur__col">
+            <div class="vorur__col col--Big3 col--Bigger4">
                 <div class="vara">
                     <img class="vara__image" src="../img/chalkbag.jpg" alt="Flottur Kalkpoki">
                     <div class="vara__innihald">
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vorur__col">
+            <div class="vorur__col col--Big3 col--Bigger4">
                 <div class="vara">
                     <img class="vara__image" src="../img/climbingrope.jpg" alt="Blátt Klifurband">
                     <div class="vara__innihald">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vorur__col">
+            <div class="vorur__col col--Big3 col--Bigger4">
                 <div class="vara">
                     <img class="vara__image" src="../img/shoes.jpg" alt="Þröngir Klifurskór">
                     <div class="vara__innihald">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vorur__col">
+            <div class="vorur__col col--Big3 col--Bigger4">
                 <div class="vara">
                     <img class="vara__image" src="../img/Dring.jpg" alt="Litríkar Karabínur">
                     <div class="vara__innihald">
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vorur__col">
+            <div class="vorur__col col--Big3 col--Bigger4">
                 <div class="vara">        
                     <img class="vara__image" src="../img/Harness.jpg" alt="Lúxus Klifurbelti">
                     <div class="vara__innihald">
