--- a/pages/cart.html
+++ b/pages/cart.html
@@ -36,7 +36,11 @@
                 </div>
         </header>
     <main>
-      <h2>Vörur í körfu</h2>
+		<div class="titill__row">
+			<div class="titill__col">
+	  			<h2 class="titill__texti">Vörur í körfu</h2>
+			</div>
+		</div>
       <div class="vorur">
           <div class="vorur__row">
               <div class="vorur__col">
@@ -331,9 +335,12 @@
                 </div>
             </div>
         </div>
-    </div>
+	</div>
+	
+	<div class="takki">
+		<button class="blue__button">Kaupa</button>
+	</div>
 
-	<button>Kaupa</button>
     </main>
     <footer>
         <div class="footer__row">
