laga til fyllaUt skranna

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -17,16 +17,16 @@
                     <div class="header__row__grid">
                         <ul class="header__row__grid-nested">
                             <div class="header__row-index">
-                                <li class="header__row-item"><a href="../index.html">Forsíða</a></li>
+                                <li class="header__row-item"><a href="../index.html">FORSÍÐA</a></li>
                             </div>
                             <div class="header__row-products">
-                                <li class="header__row-item"><a href="products.html">Vörur</a></li>
+                                <li class="header__row-item"><a href="products.html">VÖRUR</a></li>
                             </div>
                             <div class="header__row-course">
-                                <li class="header__row-item"><a href="course.html">Námskeið</a></li>
+                                <li class="header__row-item"><a href="course.html">NÁMSKEIÐ</a></li>
                             </div>
                             <div class="header__row-staff">
-                                <li class="header__row-item"><a href="staff.html">Starfsfólk</a></li>
+                                <li class="header__row-item"><a href="staff.html">STARFSFÓLK</a></li>
                             </div>
                             <div class="header__row-cart">
                                 <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="cart.html"> Karfa (6)</a></li>
@@ -90,7 +90,8 @@
         </div>
     </div>
 
-    <div class="uppl__row">
+	<div class="uppl">
+	<div class="uppl__row">
 	    <div class="uppl__col">
 		    <h2 class="uppl__titill">Sendingarupplýsingar</h2>
             <div class="uppl__skrifa">
@@ -335,6 +336,7 @@
                 </div>
             </div>
         </div>
+	</div>
 	</div>
 	
 	<div class="takki">
