blue button uppfærður í config, forsíða löguð að fyrirmælum

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
           <div class="header__row__grid">
             <ul class="header__row__grid-nested">
               <div class="header__row-index">
-                <li class="header__row-item"><a href="../index.html"><u>Forsíða</u></a></li>
+                <li class="header__row-item"><a href="../index.html"><u>FORSÍÐA</u></a></li>
               </div>
               <div class="header__row-products">
-                <li class="header__row-item"><a href="pages/products.html">Vörur</a></li>
+                <li class="header__row-item"><a href="pages/products.html">VÖRUR</a></li>
               </div>
               <div class="header__row-course">
-                <li class="header__row-item"><a href="/pages/course.html">Námskeið</a></li>
+                <li class="header__row-item"><a href="/pages/course.html">NÁMSKEIÐ</a></li>
               </div>
               <div class="header__row-staff">
-                <li class="header__row-item"><a href="/pages/staff.html">Starfsfólk</a></li>
+                <li class="header__row-item"><a href="/pages/staff.html">STARFSFÓLK</a></li>
               </div>
               <div class="header__row-cart">
                 <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="cart.html"> Karfa (6)</a></li>
@@ -47,7 +47,7 @@
           <div class="col col1 col--Big3 col2row1">
             <div class="index__card">
               <div class="index__info">
-                <h2 class="index__title">Allar Vörurnar</h2>
+                <h2 class="index__title">Allar vörurnar</h2>
                 <p class="index__description">Prílihúsið hefur allar þær vörur sem þig vantar fyrir klifrið.</p>
                 <button class="blue__button">Skoða Vörur</button>
               </div>
@@ -56,7 +56,7 @@
           <div class="col col1 col--Big3">
             <div class="index__card">
               <div class="index__info">
-                <h2 class="index__title">Besta Starfsfólkið</h2>
+                <h2 class="index__title">Besta starfsfólkið</h2>
                 <p class="index__description">Starfsfólkið okkar hugsar vel um þig.</p>
                 <button class="blue__button">Kynnast Starfsfólki</button>
               </div>
