laga[i linkinn 'i headernum

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="header__row-item"><a href="/pages/staff.html">STARFSFÓLK</a></li>
               </div>
               <div class="header__row-cart">
-                <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="cart.html"> Karfa (6)</a></li>
+                <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="/pages/cart.html"> Karfa (6)</a></li>
               </div>
             </ul>
           </div>
