--- a/pages/staff.html
+++ b/pages/staff.html
@@ -20,16 +20,16 @@
             <div class="header__row__grid">
                 <ul class="header__row__grid-nested">
                     <div class="header__row-index">
-                        <li class="header__row-item"><a href="../index.html">Forsíða</a></li>
+                        <li class="header__row-item"><a href="../index.html">FORSÍÐA</a></li>
                     </div>
                     <div class="header__row-products">
-                        <li class="header__row-item"><a href="products.html">Vörur</a></li>
+                        <li class="header__row-item"><a href="products.html">VÖRUR</a></li>
                     </div>
                     <div class="header__row-course">
-                        <li class="header__row-item"><a href="course.html">Námskeið</a></li>
+                        <li class="header__row-item"><a href="course.html">NÁMSKEIÐ</a></li>
                     </div>
                     <div class="header__row-staff">
-                        <li class="header__row-item"><a href="staff.html"><u>Starfsfólk</u></a></li>
+                        <li class="header__row-item"><a href="staff.html"><u>STARFSFÓLK</u></a></li>
                     </div>
                     <div class="header__row-cart">
                         <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="cart.html"> Karfa (6)</a></li>
