laga clöss í header

--- a/pages/course.html
+++ b/pages/course.html
@@ -12,24 +12,24 @@
     <header>
         <div class="header__row"> 
             <div class="header__row__grid">
-                <h1>Prílihúsið</h1>
+                <h1 class="header__title">Prílihúsið</h1>
             </div>
             <div class="header__row__grid">
-                <ul class="header__row__grid-nested">
+                <ul class="header__list header__row__grid-nested">
                     <div class="header__row-index">
-                        <li class="header__row-item"><a href="../index.html">FORSÍÐA</a></li>
+                        <li class="header__row-item"><a class="header__link" href="../index.html">FORSÍÐA</a></li>
                     </div>
                     <div class="header__row-products">
-                        <li class="header__row-item"><a href="products.html">VÖRUR</a></li>
+                        <li class="header__row-item"><a class="header__link" href="products.html">VÖRUR</a></li>
                     </div>
                     <div class="header__row-course">
-                        <li class="header__row-item"><a href="course.html"><u>NÁMSKEIÐ</u></a></li>
+                        <li class="header__row-item"><a class="header__link" href="course.html"><u>NÁMSKEIÐ</u></a></li>
                     </div>
                     <div class="header__row-staff">
-                        <li class="header__row-item"><a href="staff.html">STARFSFÓLK</a></li>
+                        <li class="header__row-item"><a class="header__link" href="staff.html">STARFSFÓLK</a></li>
                     </div>
                     <div class="header__row-cart">
-                        <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="cart.html"> Karfa (6)</a></li>
+                        <li class="header__row-item"><img class="header__img" src="../img/cart.svg" alt="kerra"><a class="header__link" href="cart.html"> Karfa (6)</a></li>
                     </div>
                 </ul>
             </div>
