lagaði header meira

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -23,7 +23,7 @@
                         <li class="header__row-item"><a class="header__link" href="products.html">VÖRUR</a></li>
                     </div>
                     <div class="header__row-course">
-                        <li class="header__row-item"><a class="header__link" href="course.html"><u>NÁMSKEIÐ</u></a></li>
+                        <li class="header__row-item"><a class="header__link" href="course.html">NÁMSKEIÐ</a></li>
                     </div>
                     <div class="header__row-staff">
                         <li class="header__row-item"><a class="header__link" href="staff.html">STARFSFÓLK</a></li>
