--- a/pages/course.html
+++ b/pages/course.html
@@ -89,7 +89,7 @@
                     <div>
                     <div class="course__grid-4-content">
                         <div class="course__grid-4-content-cardnumber">
-                            <label class="course__box" class="course__text" for="cardnumber">Kortanúmer:</label>
+                            <label class="course__text" for="cardnumber">Kortanúmer:</label>
                         </div>
                         <div class="course__grid-4-content-cardnumber-input">
                             <input class="course__box" type="text" id="cardnumber" name="kortanúmer">
