--- a/pages/products.html
+++ b/pages/products.html
@@ -20,10 +20,10 @@
                         <li class="header__row-item"><a class="header__link" href="../index.html">FORSÍÐA</a></li>
                     </div>
                     <div class="header__row-products">
-                        <li class="header__row-item"><a class="header__link" href="products.html">VÖRUR</a></li>
+                        <li class="header__row-item"><a class="header__link" href="products.html"><u>VÖRUR</u></a></li>
                     </div>
                     <div class="header__row-course">
-                        <li class="header__row-item"><a class="header__link" href="course.html"><u>NÁMSKEIÐ</u></a></li>
+                        <li class="header__row-item"><a class="header__link" href="course.html">NÁMSKEIÐ</a></li>
                     </div>
                     <div class="header__row-staff">
                         <li class="header__row-item"><a class="header__link" href="staff.html">STARFSFÓLK</a></li>
