--- a/pages/staff.html
+++ b/pages/staff.html
@@ -26,10 +26,10 @@
                         <li class="header__row-item"><a class="header__link" href="products.html">VÖRUR</a></li>
                     </div>
                     <div class="header__row-course">
-                        <li class="header__row-item"><a class="header__link" href="course.html"><u>NÁMSKEIÐ</u></a></li>
+                        <li class="header__row-item"><a class="header__link" href="course.html">NÁMSKEIÐ</a></li>
                     </div>
                     <div class="header__row-staff">
-                        <li class="header__row-item"><a class="header__link" href="staff.html">STARFSFÓLK</a></li>
+                        <li class="header__row-item"><a class="header__link" href="staff.html"><u>STARFSFÓLK</u></a></li>
                     </div>
                     <div class="header__row-cart">
                         <li class="header__row-item"><img class="header__img" src="../img/cart.svg" alt="kerra"><a class="header__link" href="cart.html"> Karfa (6)</a></li>
