--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
           <div class="header__row__grid">
               <ul class="header__list header__row__grid-nested">
                   <div class="header__row-index">
-                      <li class="header__row-item"><a class="header__link" href="../index.html">FORSÍÐA</a></li>
+                      <li class="header__row-item"><a class="header__link" href="../index.html"><u>FORSÍÐA</u></a></li>
                   </div>
                   <div class="header__row-products">
                       <li class="header__row-item"><a class="header__link" href="/pages/products.html">VÖRUR</a></li>
                   </div>
                   <div class="header__row-course">
-                      <li class="header__row-item"><a class="header__link" href="/pages/course.html"><u>NÁMSKEIÐ</u></a></li>
+                      <li class="header__row-item"><a class="header__link" href="/pages/course.html">NÁMSKEIÐ</a></li>
                   </div>
                   <div class="header__row-staff">
                       <li class="header__row-item"><a class="header__link" href="/pages/staff.html">STARFSFÓLK</a></li>
