--- a/pages/products.html
+++ b/pages/products.html
@@ -51,7 +51,7 @@
                             <p class="vara__verd">49.900 kr.-</p>
                             <div class="vara__moguleikar__vorur">
                                 <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
-                                <div>
+                                <div class="vara__takkastaerd">
                                     <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
                                     <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
                                 </div>
@@ -73,7 +73,7 @@
                             <p class="vara__verd">4.900 kr.-</p>
                             <div class="vara__moguleikar__vorur">
                                 <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
-                                <div>
+                                <div class="vara__takkastaerd">
                                     <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
                                     <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
                                 </div>
@@ -94,7 +94,7 @@
                             <p class="vara__verd">39.900 kr.-</p>
                             <div class="vara__moguleikar__vorur">
                                 <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
-                                <div>
+                                <div class="vara__takkastaerd">
                                     <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
                                     <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
                                 </div>
@@ -115,7 +115,7 @@
                             <p class="vara__verd">19.900 kr.-</p>
                             <div class="vara__moguleikar__vorur">
                                 <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
-                                <div>
+                                <div class="vara__takkastaerd">
                                     <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
                                     <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
                                 </div>
@@ -136,7 +136,7 @@
                             <p class="vara__verd">10.900 kr.-</p>
                             <div class="vara__moguleikar__vorur">
                                 <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
-                                <div>
+                                <div class="vara__takkastaerd">
                                     <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
                                     <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
                                 </div>
@@ -157,7 +157,7 @@
                             <p class="vara__verd">1.999.900 kr.-</p>
                             <div class="vara__moguleikar__vorur">
                                 <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
-                                <div>
+                                <div class="vara__takkastaerd">
                                     <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
                                     <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
                                 </div>
