laga til fontið

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -96,17 +96,17 @@
 		    <h2 class="uppl__titill">Sendingarupplýsingar</h2>
             <div class="uppl__skrifa">
                 <div class="reitur">
-                    <label for="nafn">Nafn:</label>
+                    <label class="text" for="nafn">Nafn:</label>
 		            <input class="kassi" type="text" name="nafn" id="nafn">
                 </div>
                 <div class="reitur">
-	    	        <label for="HF">Heimilisfang:</label>
+	    	        <label class="text" for="HF">Heimilisfang:</label>
 		            <input class="kassi" type="text" name="Heimilisfang" id="HF">
                 </div>
             </div>
 
             <div class="uppl__gildi">
-                <label for="postNr">Póstnúmer:</label>
+                <label class="text" for="postNr">Póstnúmer:</label>
                     <div class="uppl__velja">
 		                <select class="dropDown stor" name="PostNumer" id="postNr">
                             <option>-Velja póstnúmer-</option>
@@ -300,18 +300,18 @@
             <h2 class="uppl__titill">Greiðsluupplýsingar</h2>
             <div class="uppl__skrifa">
                 <div class="reitur">
-		            <label for="KN">Kortanúmer:</label>
+		            <label class="text" for="KN">Kortanúmer:</label>
                     <input class="kassi" type="text" id="KN">
                 </div>
                 <div class="reitur">
-                    <label for="KH">Korthafi:</label>
+                    <label class="text" for="KH">Korthafi:</label>
                     <input class="kassi" type="text" id="KH">
                 </div>
             </div>
             <div class="uppl__gildi">
-                <label for="gildisT">Gildistími:</label>
+                <label class="text" for="gildisT">Gildistími:</label>
 	            <div class="uppl__velja" id="gildisT">
-		            <label for="maunudur">Mán</label>
+		            <label class="text" for="maunudur">Mán</label>
 		                <select class="dropDown">
 			                <option>01</option>
     			<option>02</option>
@@ -326,7 +326,7 @@
 	    		<option>11</option>
 		    	<option>12</option>
 		                </select>
-		            <label for="Ar">Ár</label>
+		            <label class="text" for="Ar">Ár</label>
 		                <select class="dropDown">
 			                <option>2019</option>
 			                <option>2020</option>
