--- a/pages/products.html
+++ b/pages/products.html
@@ -171,49 +171,57 @@
  </main>
  
  <footer>
-    <div class="footer__row">
-     <div class="footer__col">
-         <p class="footer__title">Vöruflokkar</p>
-         <ul>
-             <li><a href="../pages/products.html">Nauðsynjavörur</a></li>
-             <li><a href="../pages/products.html">Frábærar vörur</a></li>
-             <li><a href="../pages/products.html">Ómissandi vörur</a></li>
-             <li><a href="../pages/products.html">Ótrúlegar vörur</a></li>
-             <li><a href="../pages/products.html">Magnaðar vörur</a></li>
-         </ul>
-     </div>
-     <div class="footer__col">
-         <p class="footer__title">Vöruflokkar</p>
-         <ul>
-             <li><a href="../pages/products.html">Trylltar vörur</a></li>
-             <li><a href="../pages/products.html">Geggjaðar vörur</a></li>
-             <li><a href="../pages/products.html">Svakalegar vörur</a></li>
-             <li><a href="../pages/products.html">Fáránlegar vörur</a></li>
-             <li><a href="../pages/products.html">Klikkaðar vörur</a></li>
-         </ul>
-     </div>
-     <div class="footer__col">
-         <p class="footer__title">Námskeið</p>
-         <ul>
-             <li><a href="../pages/course.html">V0 - V1 námskeið</a></li>
-             <li><a href="../pages/course.html">V2 - V4 námskeið</a></li>
-             <li><a href="../pages/course.html">V5 - V7 námskeið</a></li>
-             <li><a href="../pages/course.html">Fjallaklifur námskeið</a></li>
-         </ul>
-     </div>
-     <div class="footer__col">
-         <p class="footer__title">Síður</p>
-         <ul>
-             <li><a href="../pages/products.html">Allar vörur</a></li>
-             <li><a href="../pages/staff.html">Starfsfólk</a></li>
-             <li><a href="../pages/course.html">Námskeið</a></li>
-             <li><a href="../pages/cart.html">Karfa</a></li>
-         </ul>
-     </div>
+        <div class="footer__index">
+        <div class="footer__row">
+        <div class="footer__combined">
+         <div class="footer__col">
+             <p class="footer__title">Vöruflokkar</p>
+             <ul class="footer__list">
+                 <li><a class="footer__link" href="../pages/products.html">Nauðsynjavörur</a></li>
+                 <li><a class="footer__link" href="../pages/products.html">Frábærar vörur</a></li>
+                 <li><a class="footer__link" href="../pages/products.html">Ómissandi vörur</a></li>
+                 <li><a class="footer__link" href="../pages/products.html">Ótrúlegar vörur</a></li>
+                 <li><a class="footer__link" href="../pages/products.html">Magnaðar vörur</a></li>
+             </ul>
+         </div>
+        
+         
+         <div class="footer__col">
+             <p class="footer__title">Vöruflokkar</p>
+             <ul class="footer__list">
+                 <li><a class="footer__link" href="../pages/products.html">Trylltar vörur</a></li>
+                 <li><a class="footer__link" href="../pages/products.html">Geggjaðar vörur</a></li>
+                 <li><a class="footer__link" href="../pages/products.html">Svakalegar vörur</a></li>
+                 <li><a class="footer__link" href="../pages/products.html">Fáránlegar vörur</a></li>
+                 <li><a class="footer__link" href="../pages/products.html">Klikkaðar vörur</a></li>
+             </ul>
+         </div>
+        </div>
+        <div class="footer__combined">
+         <div class="footer__col">
+             <p class="footer__title">Námskeið</p>
+             <ul class="footer__list">
+                 <li><a class="footer__link" href="../pages/course.html">V0 - V1 námskeið</a></li>
+                 <li><a class="footer__link" href="../pages/course.html">V2 - V4 námskeið</a></li>
+                 <li><a class="footer__link" href="../pages/course.html">V5 - V7 námskeið</a></li>
+                 <li><a class="footer__link" href="../pages/course.html">Fjallaklifur námskeið</a></li>
+             </ul>
+         </div>
+         <div class="footer__col">
+             <p class="footer__title">Síður</p>
+             <ul class="footer__list">
+                 <li><a class="footer__link" href="../pages/products.html">Allar vörur</a></li>
+                 <li><a class="footer__link" href="../pages/staff.html">Starfsfólk</a></li>
+                 <li><a class="footer__link" href="../pages/course.html">Námskeið</a></li>
+                 <li><a class="footer__link" href="../pages/cart.html">Karfa</a></li>
+             </ul>
+         </div>
+        </div>
+        </div>
+        <div>
+            <p class="trademark">© 2019 Prílihúsið</p>
+        </div>
     </div>
-    <div>
-        <p class="trademark">© 2019 Prílihúsið</p>
-    </div>
- </footer>
+     </footer>
  </body>
 </html>
